--- a/parcial 1/mipagina.html
+++ b/parcial 1/mipagina.html
@@ -12,3 +12,11 @@
     </p> 
 </body>
 </head>
+    <h1>bienvenidos a mi pagina</h1>
+    <hr> 
+    <img scr=
+        <p style="color: red; background-color: aqua;">
+         
+      </p>
+</boad>
+</html>
