--- a/parcial 1/mipagina.html
+++ b/parcial 1/mipagina.html
@@ -14,9 +14,10 @@
 </head>
     <h1>bienvenidos a mi pagina</h1>
     <hr> 
-    <img scr=
-        <p style="color: red; background-color: aqua;">
-         
+    <img scr="david tennant" alt="">
+        <p style="color: rgb(223, 221, 135); background-color: rgb(66, 42, 109);">
+         no tengo mucho que poner
+         es una imagen de david tennat :D
       </p>
 </boad>
 </html>
